@@ -11,6 +11,8 @@ Release date: March 3, 2022
 * Enhancement: Info List - Added spacing option for button
 * Enhancement: Icon List - Added icon size option for individual icons
 * Enhancement: Link Effects - Added HTML tag option
+* Enhancement: Moved PowerPack extensions settings tab below Advanced section for easy accessibility
+* Fixed: Dual Heading - Fixed minor CSS glitch
 
 == 2.6.9 ==
 Release date: February 7, 2022
